logging page part1

--- a/logging-mvc/src/main/resources/messages_sk.properties
+++ b/logging-mvc/src/main/resources/messages_sk.properties
@@ -22,6 +22,24 @@ title.sport.create=Vytvo\u0159i\u0165 \u0161port
 title.sport.update=Upravi\u0165 \0151port
 title.error.403=P\u0159\u00EDstup odmietnut\u00FD
 title.error.404=Str\u00E1nka nen\u00E1jden\u00E1
+title.logging=Logovanie
+
+#
+# Logging
+#
+logging.destination=Log destination
+logging.collector=Log collector
+logging.direcotry=Log directory
+logging.filename=Log filename
+logging.filemode=Log filemode
+logging.rotationage=Rotation age
+logging.rotationsize=Rotation size
+logging.minmessage=Log mim message
+logging.minerror=Log min error statement
+logging.minduration=Min duration
+logging.logduration=Log duration
+logging.prefix=Log line prefix
+logging.submit=Apply
 
 #
 # Link
