--- a/logging-mvc/src/main/resources/messages.properties
+++ b/logging-mvc/src/main/resources/messages.properties
@@ -22,6 +22,24 @@ title.sport.create=Create Sport
 title.sport.update=Update Sport
 title.error.403=Access denied
 title.error.404=Page not found
+title.logging=Logging
+
+#
+# Logging
+#
+logging.destination=Log destination
+logging.collector=Log collector
+logging.direcotry=Log directory
+logging.filename=Log filename
+logging.filemode=Log filemode
+logging.rotationage=Rotation age
+logging.rotationsize=Rotation size
+logging.minmessage=Log min message
+logging.minerror=Log min error statement
+logging.minduration=Min duration
+logging.logduration=Log duration
+logging.prefix=Log line prefix
+logging.submit=Apply
 
 #
 # Link
