--- a/logging-mvc/src/main/resources/messages_cs.properties
+++ b/logging-mvc/src/main/resources/messages_cs.properties
@@ -22,6 +22,25 @@ title.sport.create=Vytvo\u0159it sport
 title.sport.update=Upravit sport
 title.error.403=P\u0159\u00EDstup odep\u0159en
 title.error.404=Str\u00E1nka nenalezena
+title.logging=Logov\u00E1ni
+
+#
+# Logging
+#
+logging.destination=Log destination
+logging.collector=Log collector
+logging.direcotry=Log directory
+logging.filename=Log filename
+logging.filemode=Log filemode
+logging.rotationage=Rotation age
+logging.rotationsize=Rotation size
+logging.minmessage=Log mim message
+logging.minerror=Log min error statement
+logging.minduration=Min duration
+logging.logduration=Log duration
+logging.prefix=Log line prefix
+logging.submit=Apply
+
 
 #
 # Link
