--- a/logging-mvc/src/main/resources/messages_sk.properties
+++ b/logging-mvc/src/main/resources/messages_sk.properties
@@ -28,8 +28,7 @@ title.logging=Logovanie
 # Logging
 #
 logging.destination=Log destination
-logging.collector=Log collector
-logging.direcotry=Log directory
+logging.directory=Log directory
 logging.filename=Log filename
 logging.filemode=Log filemode
 logging.rotationage=Rotation age
@@ -40,6 +39,12 @@ logging.minduration=Min duration
 logging.logduration=Log duration
 logging.prefix=Log line prefix
 logging.submit=Apply
+logging.rootLevel=Root level
+logging.pa036Level=PA036 level
+logging.springLevel=Spring level
+logging.hibernateLevel=Hibernate Level
+logging.hibernateTypeLevel=Hibernate type level
+logging.hibernateSQLLevel=Hibernate SQL level
 
 #
 # Link
