added log management item

--- a/logging-mvc/src/main/resources/messages.properties
+++ b/logging-mvc/src/main/resources/messages.properties
@@ -27,6 +27,7 @@ title.logging=Logging
 #
 # Logging
 #
+logging.statement=Log statement
 logging.destination=Log destination
 logging.directory=Log directory
 logging.filename=Log filename
