--- a/logging-mvc/src/main/resources/messages_cs.properties
+++ b/logging-mvc/src/main/resources/messages_cs.properties
@@ -27,6 +27,7 @@ title.logging=Logov\u00E1ni
 #
 # Logging
 #
+logging.statement=Log statement
 logging.destination=Log destination
 logging.directory=Log directory
 logging.filename=Log filename
