--- a/logging-mvc/src/main/resources/messages.properties
+++ b/logging-mvc/src/main/resources/messages.properties
@@ -143,7 +143,7 @@ Past=Date has to be in the past.
 #
 # Page - Index
 #
-page.index.welcome=Welcome in System for Management of Sporting Events
+page.index.welcome=Welcome to System for Management of Sporting Events
 page.index.alert.logout=You were successfully logged out.
 
 #
